# idns-rust-crates

./: Cargo.toml  README.md
identity/identity/: Cargo.toml
identity/identity-comm/: Cargo.toml
identity/identity-comm/src/: error.rs  lib.rs  types.rs
identity/identity-comm/src/envelope/: encrypted.rs  mod.rs  plaintext.rs  signed.rs  traits.rs
identity/identity-comm/src/message/: mod.rs  traits.rs
identity/identity-core/: Cargo.toml
identity/identity-core/src/: error.rs  lib.rs
identity/identity-core/src/common/: bitset.rs  context.rs  fragment.rs  mod.rs  object.rs  one_or_many.rs  timestamp.rs  url.rs
identity/identity-core/src/convert/: json.rs  mod.rs  serde_into.rs
identity/identity-core/src/crypto/: mod.rs
identity/identity-core/src/crypto/key/: collection.rs  key.rs  mod.rs  pair.rs  reference.rs  type_.rs
identity/identity-core/src/crypto/merkle_key/: base.rs  impls.rs  mod.rs  signer.rs  tag.rs  tests.rs  traits.rs  verifier.rs
identity/identity-core/src/crypto/merkle_tree/: digest.rs  hash.rs  merkle.rs  mod.rs  node.rs  proof.rs  serde.rs  traits.rs
identity/identity-core/src/crypto/proof/: jcs_ed25519.rs  mod.rs
identity/identity-core/src/crypto/signature/: ed25519.rs  mod.rs  signature.rs  signature_value.rs
identity/identity-core/src/crypto/signature/traits/: core.rs  data.rs  mod.rs
identity/identity-core/src/utils/: base_encoding.rs  ed25519.rs  mod.rs
identity/identity-credential/: Cargo.toml
identity/identity-credential/src/: error.rs  lib.rs
identity/identity-credential/src/credential/: builder.rs  credential.rs  evidence.rs  issuer.rs  mod.rs  policy.rs  refresh.rs  schema.rs  status.rs  subject.rs
identity/identity-credential/src/presentation/: builder.rs  mod.rs  presentation.rs
identity/identity-did/: Cargo.toml
identity/identity-did/src/: error.rs  lib.rs
identity/identity-did/src/did/: did.rs  did_url.rs  error.rs  mod.rs
identity/identity-did/src/diff/: diff_document.rs  diff_method.rs  diff_service.rs  method_data.rs  method_ref.rs  method_type.rs  mod.rs  ordered_set.rs
identity/identity-did/src/document/: builder.rs  core_document.rs  mod.rs
identity/identity-did/src/resolution/: dereference.rs  document_metadata.rs  error_kind.rs  impls.rs  input_metadata.rs  mod.rs  resolution.rs  resolution_metadata.rs  resource.rs  traits.rs
identity/identity-did/src/service/: builder.rs  mod.rs  service.rs  service_endpoint.rs
identity/identity-did/src/utils/: key_comparable.rs  mod.rs  ordered_set.rs
identity/identity-did/src/verifiable/: document.rs  mod.rs  properties.rs  tests.rs  traits.rs
identity/identity-did/src/verification/: builder.rs  method_data.rs  method_query.rs  method_ref.rs  method_relationship.rs  method_scope.rs  method_type.rs  mod.rs  traits.rs  verification_method.rs
identity/identity-diff/: Cargo.toml
identity/identity-diff/derive/: Cargo.toml
identity/identity-diff/derive/src/: impls.rs  lib.rs  model.rs  utils.rs
identity/identity-diff/derive/src/impls/: enums.rs  structs.rs
identity/identity-diff/src/: error.rs  hashmap.rs  hashset.rs  lib.rs  macros.rs  object.rs  option.rs  string.rs  traits.rs  value.rs  vec.rs
identity/identity-runnerc/: Cargo.toml
identity/identity-runnerc/examples/: document.rs
identity/identity-runnerc/src/: constants.rs  error.rs  lib.rs  resolver.rs
identity/identity-runnerc/src/credential/: validator copy.rs  validator.rs
identity/identity-runnerc/src/did/: macros.rs  mod.rs  runnerc_did.rs  segments.rs
identity/identity-runnerc/src/document/: diff_message.rs  mod.rs  properties.rs  runnerc_document.rs  runnerc_verification_method.rs
identity/identity-runnerc/src/runnerc/: client.rs  client_map.rs  explorer.rs  mod.rs  network.rs  publish.rs  receipt.rs  traits.rs
identity/identity-runnerc/src/runnerc/message/: message.rs  message_ext.rs  message_id.rs  message_index.rs  mod.rs
identity/identity-runnerc/src/utils/: mod.rs
identity/identity/src/: lib.rs
identity/libjose/: Cargo.toml
identity/libjose/examples/: basic_jws.rs  custom_claims.rs  custom_payload.rs
identity/libjose/src/: error.rs  lib.rs  macros.rs
identity/libjose/src/jose/: cty.rs  mod.rs  traits.rs  typ.rs
identity/libjose/src/jwe/: algorithm.rs  compression.rs  decoder.rs  encoder.rs  encryption.rs  format.rs  header.rs  mod.rs  recipient.rs
identity/libjose/src/jwk/: key.rs  key_management.rs  key_operation.rs  key_params.rs  key_set.rs  key_type.rs  key_use.rs  mod.rs
identity/libjose/src/jwk/curve/: ec.rs  ecdh.rs  ecx.rs  ed.rs  mod.rs
identity/libjose/src/jwm/: attributes.rs  mod.rs
identity/libjose/src/jws/: algorithm.rs  charset.rs  decoder.rs  encoder.rs  format.rs  header.rs  mod.rs  recipient.rs
identity/libjose/src/jwt/: claims.rs  header.rs  header_set.rs  mod.rs
identity/libjose/src/jwt/profile/: core.rs  mod.rs
identity/libjose/src/utils/: base64.rs  mod.rs  serde.rs
identity/libjose/src/utils/crypto/: concat_kdf.rs  diffie_hellman.rs  key_params.rs  key_repr.rs  mod.rs  random.rs  rsa_primes.rs  x25519.rs
rustdesk/enigo/src/linux/: pynput.rs
rustdesk/hbb_common/: Cargo.toml
rustdesk/hbb_common/src/: compress.rs  config.rs
rustdesk/virtual_display/src/win10/: IddController.c
