[workspace]
members = [
    "rustdesk/clipboard",
    "rustdesk/enigo",
    "rustdesk/hbb_common",
    "rustdesk/scrap",
    "rustdesk/simple_rc",
    "rustdesk/virtual_display",
    "identity/identity-runnerc",
    "identity/identity-comm",
    "identity/identity-core",
    "identity/identity-credential",
    "identity/identity-did",
    "identity/identity-diff",
    "identity/identity",
    "identity/libjose",
]
