[package]
name = "identity-comm"
version = "0.4.0"
edition = "2021"
description = "An implementation of the DIDComm Messaging Specification."

[dependencies]
identity-core = { path = "../identity-core", version = "=0.4.0" }
identity-credential = { path = "../identity-credential", version = "=0.4.0" }
identity-did = { path = "../identity-did", version = "=0.4.0" }
libjose = { path = "../libjose", version = "=0.1.0" }
paste = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.23", features = ["derive"] }
thiserror = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"], default-features = false }

[features]
# Enables Web Assembly support
wasm = ["uuid/wasm-bindgen"]
