[package]
name = "identity-did"
version = "0.4.0"
edition = "2021"
description = "An implementation of the Decentralized Identifiers standard."

[dependencies]
async-trait = { version = "0.1", default-features = false }
did_url = { version = "0.1", default-features = false, features = [
    "std",
    "serde",
] }
form_urlencoded = { version = "1.0.1", default-features = false }
identity-core = { version = "=0.4.0", path = "../identity-core" }
indexmap = { version = "1.7", default-features = false, features = [
    "std",
    "serde-1",
] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
strum = { version = "0.23", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
proptest = { version = "1.0" }
