[package]
name = "identity-diff"
version = "0.4.0"
edition = "2021"
description = "The `Diff` trait for the identity-rs library."

[dependencies]
did_url = { version = "0.1", default-features = false, features = ["alloc"] }
identity-diff-derive = { version = "=0.4.0", path = "derive", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.23", features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["derive"]
derive = ["identity-diff-derive"]
