[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
# identity-account = { version = "=0.4.0", path = "./crates/identity-account", optional = true }
identity-comm = { version = "=0.4.0", path = "../identity-comm" }
identity-core = { version = "=0.4.0", path = "../identity-core" }
identity-credential = { version = "=0.4.0", path = "../identity-credential" }
identity-did = { version = "=0.4.0", path = "../identity-did" }
identity-runnerc = { version = "=0.4.0", path = "../identity-runnerc", default-features = false }
