[package]
name = "identity-diff-derive"
version = "0.4.0"
edition = "2021"
description = "Derive `Diff` support for the identity-rs library."

[lib]
name = "identity_diff_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0" }
syn = { version = "1.0", features = ["extra-traits", "parsing", "derive"] }
